@@ -235,6 +235,14 @@ DECLARE_BUILTIN_FUNCTION(FunctionFunction)
 DECLARE_BUILTIN_FUNCTION(SelectFunction)
 DECLARE_BUILTIN_FUNCTION(TitleFunction)
 DECLARE_BUILTIN_FUNCTION(IFFunction)
+DECLARE_BUILTIN_FUNCTION(IsNumberFunction)
+DECLARE_BUILTIN_FUNCTION(IsRealFunction)
+DECLARE_BUILTIN_FUNCTION(IsRationalFunction)
+DECLARE_BUILTIN_FUNCTION(IsIntegerFunction)
+DECLARE_BUILTIN_FUNCTION(RepresentsNumberFunction)
+DECLARE_BUILTIN_FUNCTION(RepresentsRealFunction)
+DECLARE_BUILTIN_FUNCTION(RepresentsRationalFunction)
+DECLARE_BUILTIN_FUNCTION(RepresentsIntegerFunction)
 DECLARE_BUILTIN_FUNCTION(ErrorFunction)
 DECLARE_BUILTIN_FUNCTION(WarningFunction)
 DECLARE_BUILTIN_FUNCTION(MessageFunction)
