@@ -1116,7 +1116,10 @@ string Argument::printlong() const {
 		str += " ";
 		str += _("that fulfills the condition:");
 		str += " \"";
-		str += scondition;
+		string str2 = scondition;
+		if(name().empty()) gsub("\\x", _("Argument"), str2);
+		else gsub("\\x", name(), str2);
+		str += str2;
 		str += "\"";
 	}
 	return str;
