@@ -1,3 +1,9 @@
+2007-04-27 Niklas Knutsson  <nq@altern.org>
+
+	* New functions: addTime(), isNumber(), isReal(), isRational(), isInteger(),
+	  representsNumber(), representsReal(), representsRational(), representsInteger()
+	* Show argument name instead of \x in argument condition
+
 2007-04-26 Niklas Knutsson  <nq@altern.org>
 
 	* Usr Lambert W to solve equations
